# guvicorn_logger

./: .gitignore  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml  python-publish.yml
guvicorn_logger/: __init__.py  core.py  logger.py
tests/: test_guvicorn_logger.py
