[tool.poetry]
name = "guvicorn_logger"
version = "0.1.14"
description = "Colored, normalizes and joins logs between Uvicorn and Gunicorn."
authors = ["carlos.rian <crian.rian@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/carlos-rian/guvicorn_logger"
keywords = ["gunicorn", "uvicorn", "logs", "logging"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "*"
gunicorn = "*"
asgi-correlation-id = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
isort = "^5.10.1"
asgi-correlation-id = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
