[tool.poetry]
name = "guvicorn_logger"
version = "0.1.17"
description = "Colored, normalizes and joins logs between Uvicorn and Gunicorn."
authors = ["carlos.rian <crian.rian@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/carlos-rian/guvicorn_logger"
keywords = ["gunicorn", "uvicorn", "logs", "logging"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "*"
gunicorn = "*"
asgi-correlation-id = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
isort = "^5.13.2"
pytz = "^2024.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
